# AutoNPP

./: Makefile  README.md  conda-lock.yml  environment.yml  pyproject.toml
configs/: test_autoint_1d_dataset.yaml
src/: download_data.py
src/data/: adapter.py  data.py
src/demo/: AlternatingMLE.py  AutoInt.py  CorrectingMLE.py
src/integration/: cheb.py  taylor.py
src/models/: ctrnn.py  transformer.py
test/: conftest.py
