[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.poetry]
name = "autonpp"
version = "0.1.0"
description = "AutoNPP: Automatic Integration Neural Point Process"
authors = ["Zihao Zhou"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = "^1.26.101"
loguru = "~=0.6.0"
matplotlib = "~=3.6.2"
numpy = "~=1.23.5"
plotly = "~=5.7.0"
pytest = "~=7.2.0"
python-dotenv = "^0.21.0"
PyYAML = "~=5.4.1"
scikit-learn = "~=1.1.3"
scipy = "~=1.10.1"
torch = "^1.13.1"
torchtyping = "~=0.1.4"
tqdm = "~=4.62.3"
typeguard = "~=2.13.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
